protocolmodel/mcrl2/testing/errors/error_1006.mcf
% E1006 - Unrecognized OOB message identifier
[true* . ERROR_MSG(E1006)] false